Ejercicio 1 y  2 (Evento Verinfo en boton, y consultar Api)

--- a/Historico.html
+++ b/Historico.html
@@ -14,8 +14,7 @@
 
     <ul class="nav ">
         <li class="nav-item"><a class="nav-link" href="app.html">Inicio</a></li>
-       
-        <li class="nav-item"><a class="nav-link" href="Historio.html">Historia</a></li>
+        <li class="nav-item"><a class="nav-link" href="Historico.html">Historia</a></li>
         <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
     </ul>
 
