--- a/app.html
+++ b/app.html
@@ -32,7 +32,8 @@
     
     <!--*******************************LABORATORIO FETCH*************************************************-->
     <!-- 1.	Utilizar el botón rojo “Leer mas “ al presionar el botón debe llamar un evento “Verinfo” -->
-    <p><a href="" class="btn btn-danger btn-lg btn-inline" onclick="Verinfo ()">Leer mas </a></p>
+    <p><a href="#" class="btn btn-danger btn-lg btn-inline"  onclick="Verinfo ()">Leer mas </a></p> 
+    
     </div>
 
 </div>
@@ -47,7 +48,7 @@
       <div class="col-md-4">
         <h2>Heading</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="#" role="button" onclick="Verinfo ()">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h2>Heading</h2>
