anadi comentarios al codigo

--- a/app.html
+++ b/app.html
@@ -113,6 +113,7 @@
             </tr>
         </thead>
 
+        <!--Se deja este body vacio para ingresarle los datos de la tabla dinamicamente-->
         <tbody id="contenidotabla">
         
         </tbody>
